changed unauthorised to forbidden

--- a/client/templates/main.html
+++ b/client/templates/main.html
@@ -39,17 +39,20 @@
 		<!-- One -->
 			<section id="one" class="wrapper">
 			<div class="row inner">
-				<div class="4u 12u$(medium)">
+				<div class="4u 12u$(medium)" align="center">
+					<i class="fa fa-dollar fa-5x" style="padding:10%"></i>
 					<h3>No minimum cost</h3>
-					<p>With this plaform, there is no minimum cost! Simply state a reasonable price, and someone en-route to your location might just take up your request!</p>
+					<p align="left">With this plaform, there is no minimum cost! Simply state a reasonable price, and someone en-route to your location might just take up your request!</p>
 				</div>
-				<div class="4u 12u$(medium)">
+				<div class="4u 12u$(medium)" align="center">
+					<i class="fa fa-list fa-5x" style="padding:10%"></i>
 					<h3>Unlimited Choices</h3>
-					<p>Not bounded by any affiliations with restaurants, the sky's the limit! Any food you desire can be obtained without leaving the comfort of your home!</p>
+					<p align="left">Not bounded by any affiliations with restaurants, the sky's the limit! Any food you desire can be obtained without leaving the comfort of your home!</p>
 				</div>
-				<div class="4u 12u$(medium)">
+				<div class="4u 12u$(medium)" align="center">
+					<i class="fa fa-users fa-5x" style="padding:10%"></i>
 					<h3>Power of crowdsourcing</h3>
-					<p>Harnessing the power of the public, there will definitely be someone that is convenient to pick up your requests.</p>
+					<p align="left">Harnessing the power of the public, there will definitely be someone that is convenient to pick up your requests.</p>
 				</div>
 			</div>
 			</section>
