--- a/client/templates/unauthorised.html
+++ b/client/templates/unauthorised.html
@@ -1,7 +1,7 @@
 <template name="unauthorised">
 <section id="banner">
 	<div class="content">
-		<h1>Unauthorised</h1>
+		<h1>Forbidden</h1>
 		<p style="color:white">You are not authorised to view this page. Please log in or sign up.</p>
 		<ul class="actions">
 			<li><a href="/" class="button">Back to Home</a></li>
