--- a/client/templates/admin.html
+++ b/client/templates/admin.html
@@ -2,6 +2,7 @@
 <section class="wrapper">
 	<div class="inner" align="center">
 		<h3>All Users</h3>
+			{{#if usersLoaded}}
 			<div class="table-wrapper">
 				<table class="alt">
 					<thead>
@@ -24,8 +25,12 @@
 					</tbody>
 				</table>
 			</div>
+			{{else}}
+			<i class="fa fa-refresh fa-spin fa-5x fa-fw" style="color:#f6755e"></i>
+			{{/if}}
 
 		<h3>All Requests</h3>
+		{{#if requestsLoaded}}
 		<div class="table-wrapper">
 			<table class="alt">
 				<thead>
@@ -54,6 +59,9 @@
 				</tbody>
 			</table>
 		</div>
+		{{else}}
+		<i class="fa fa-refresh fa-spin fa-5x fa-fw" style="color:#f6755e"></i>
+		{{/if}}
 	</div>
 </section>
 </template>
