--- a/client/templates/deliver.html
+++ b/client/templates/deliver.html
@@ -1,7 +1,8 @@
 <template name="deliver">
 	<section class="wrapper">
-		<div class="inner">
-			<h1 align="center">Delivery Requests</h1>
+		<div class="inner" align="center">
+			<h1>Delivery Requests</h1>
+			{{#if requestsLoaded}}
 			{{#if equals requests.count 0}}
 			<h3 align="center">No pending delivery requests at the moment, check back in a while!</h3>
 			{{else}}
@@ -27,6 +28,9 @@
 					</tbody>
 				</table>
 			</div>
+			{{/if}}
+			{{else}}
+			<i class="fa fa-refresh fa-spin fa-5x fa-fw" style="color:#f6755e"></i>
 			{{/if}}
 		</div>
 	</section>
