--- a/client/templates/request.html
+++ b/client/templates/request.html
@@ -3,7 +3,7 @@
 
 <div class="inner">
 <h1 align="center">Request Delivery</h1>
-
+	{{#if hawkersLoaded}}
 	<form method="post" class="new-request">
 		<div class="row uniform">
 			<div class="2u 12u$(xsmall)"><h3>Item</h3></div>
@@ -45,6 +45,11 @@
 			</div>
 		</div>
 	</form>
+	{{else}}
+	<div align="center">
+		<i class="fa fa-refresh fa-spin fa-5x fa-fw" style="color:#f6755e"></i>
+	</div>
+	{{/if}}
 </div>
 </section>
 </template>
